fix wrapping

--- a/stockdice/static/style.css
+++ b/stockdice/static/style.css
@@ -91,4 +91,5 @@ div.dice-navigation {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
